--- a/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
+++ b/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
@@ -118,7 +118,7 @@
       "source": [
         "model = FastLanguageModel.get_peft_model(\n",
         "    model,\n",
-        "    r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
+        "    r = 128, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
         "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
         "                      \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
         "    lora_alpha = 16,\n",
@@ -175,6 +175,8 @@
         "import pandas as pd\n",
         "from datasets import Dataset\n",
         "\n",
+        "csv_path = \"/content/drive/MyDrive/Fine-tune/Dataset_last_version.xlsx\"\n",
+        "\n",
         "# Excel dosyasını okurken encoding parametresini belirtin\n",
         "df = pd.read_excel(\n",
         "    csv_path,\n",
@@ -208,6 +210,7 @@
         "### Response:\n",
         "{}\"\"\"\n",
         "\n",
+        "EOS_TOKEN = tokenizer.eos_token\n",
         "def formatting_prompts_func(examples):\n",
         "    instructions = examples[\"instruction\"]\n",
         "    inputs = examples[\"input\"]\n",
@@ -239,7 +242,7 @@
       "cell_type": "code",
       "source": [
         "print(\"İlk birkaç satır:\")\n",
-        "print(df[['instruction', 'input', 'output']].head())\n",
+        "print(df[['instruction', 'input', 'output']].head(30))\n",
         "print(\"\\nKarakter encoding'i kontrol:\")\n",
         "for col in ['instruction', 'input', 'output']:\n",
         "    print(f\"\\n{col} sütunundaki benzersiz karakterler:\")\n",
@@ -262,6 +265,15 @@
         "### Train the model\n",
         "Now let's use Huggingface TRL's `SFTTrainer`! More docs here: [TRL SFT docs](https://huggingface.co/docs/trl/sft_trainer). We do 60 steps to speed things up, but you can set `num_train_epochs=1` for a full run, and turn off `max_steps=None`. We also support TRL's `DPOTrainer`!"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#LOG LOSS A GÖRE MAX_STEPS BELİRLEYECEĞİZ."
+      ],
+      "metadata": {
+        "id": "pIZM52wjRWSP"
+      }
     },
     {
       "cell_type": "code",
@@ -289,7 +301,7 @@
         "        gradient_accumulation_steps = 4,\n",
         "        warmup_steps = 5,\n",
         "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
-        "        max_steps = 20,\n",
+        "        max_steps = 200,\n",
         "        learning_rate = 2e-4,\n",
         "        fp16 = not is_bfloat16_supported(),\n",
         "        bf16 = is_bfloat16_supported(),\n",
@@ -307,7 +319,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "2ejIt2xSNKKp"
       },
       "outputs": [],
@@ -345,14 +356,14 @@
       "source": [
         "# Doğrudan HuggingFace'e push etme\n",
         "model.push_to_hub(\n",
-        "    \"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_v2\",\n",
+        "    \"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_vllm_v2\",\n",
         "    token=\"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\",\n",
         "    save_full_model=True,  # Full model'i kaydet\n",
         "    max_shard_size=\"1GB\",  # Büyük dosyaları parçala\n",
         ")\n",
         "\n",
         "tokenizer.push_to_hub(\n",
-        "    \"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_v2\",\n",
+        "    \"kmk4444/Meta-Llama-3.1-8B-Instruct_syseng_vllm_v2\",\n",
         "    token=\"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\"\n",
         ")"
       ],
@@ -382,120 +393,6 @@
         "print(f\"Peak reserved memory for training = {used_memory_for_lora} GB.\")\n",
         "print(f\"Peak reserved memory % of max memory = {used_percentage} %.\")\n",
         "print(f\"Peak reserved memory for training % of max memory = {lora_percentage} %.\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ekOmTR1hSNcr"
-      },
-      "source": [
-        "<a name=\"Inference\"></a>\n",
-        "### Inference\n",
-        "Let's run the model! You can change the instruction and input - leave the output blank!\n",
-        "\n",
-        "**[NEW] Try 2x faster inference in a free Colab for Llama-3.1 8b Instruct [here](https://colab.research.google.com/drive/1T-YBVfnphoVc8E2E854qF3jdia2Ll2W2?usp=sharing)**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# alpaca_prompt = Copied from above\n",
-        "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
-        "inputs = tokenizer(\n",
-        "[\n",
-        "    alpaca_prompt.format(\n",
-        "        \"Translate the following to Turkish: 'Systems engineering is a methodical, multi-disciplinary approach for the design, realization, technical management, operations, and retirement of a system.\", # instruction\n",
-        "        \"Systems engineering is a methodical, multi-disciplinary approach for the design, realization, technical management, operations, and retirement of a system.\" # input\n",
-        "        # The original code was missing an argument here!\n",
-        "    )\n",
-        "], return_tensors = \"pt\").to(\"cuda\")\n",
-        "\n",
-        "outputs = model.generate(**inputs, max_new_tokens = 64, use_cache = True)\n",
-        "tokenizer.batch_decode(outputs)"
-      ],
-      "metadata": {
-        "id": "MugMMvQ5ftLj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "kR3gIAX-SM2q"
-      },
-      "outputs": [],
-      "source": [
-        "# alpaca_prompt = Copied from above\n",
-        "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
-        "inputs = tokenizer(\n",
-        "[\n",
-        "    alpaca_prompt.format(\n",
-        "        \"Translate the following to Turkish: 'Systems engineering is a methodical, multi-disciplinary approach for the design, realization, technical management, operations, and retirement of a system.\", # instruction\n",
-        "        \"Systems engineering is a methodical, multi-disciplinary approach for the design, realization, technical management, operations, and retirement of a system.,\" # input\n",
-        "        \"\", # output - leave this blank for generation!\n",
-        "    )\n",
-        "], return_tensors = \"pt\").to(\"cuda\")\n",
-        "\n",
-        "outputs = model.generate(**inputs, max_new_tokens = 64, use_cache = True)\n",
-        "tokenizer.batch_decode(outputs)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "alpaca_prompt = \"{}\\nInput: {}\\nOutput: {}\"  # Üç yer tutucu ekledim\n",
-        "inputs = tokenizer(\n",
-        "[\n",
-        "    alpaca_prompt.format(\n",
-        "        \"Translate the following to Turkish: 'Systems engineering is a methodical, multi-disciplinary approach for the design, realization, technical management, operations, and retirement of a system.'\",  # instruction\n",
-        "        \"Systems engineering is a methodical, multi-disciplinary approach for the design, realization, technical management, operations, and retirement of a system.\",  # input\n",
-        "        \"\"  # output - generation için boş bırakıyoruz\n",
-        "    )\n",
-        "], return_tensors=\"pt\").to(\"cuda\")\n",
-        "\n",
-        "outputs = model.generate(**inputs, max_new_tokens=64, use_cache=True)\n",
-        "tokenizer.batch_decode(outputs)\n"
-      ],
-      "metadata": {
-        "id": "VrgS9sC8gDr4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CrSvZObor0lY"
-      },
-      "source": [
-        " You can also use a `TextStreamer` for continuous inference - so you can see the generation token by token, instead of waiting the whole time!"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "e2pEuRb1r2Vg"
-      },
-      "outputs": [],
-      "source": [
-        "# alpaca_prompt = Copied from above\n",
-        "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
-        "inputs = tokenizer(\n",
-        "[\n",
-        "    alpaca_prompt.format(\n",
-        "        \"Continue the fibonnaci sequence.\", # instruction\n",
-        "        \"1, 1, 2, 3, 5, 8\", # input\n",
-        "        \"\", # output - leave this blank for generation!\n",
-        "    )\n",
-        "], return_tensors = \"pt\").to(\"cuda\")\n",
-        "\n",
-        "from transformers import TextStreamer\n",
-        "text_streamer = TextStreamer(tokenizer)\n",
-        "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 128)"
       ]
     },
     {
@@ -703,7 +600,7 @@
       "source": [
         "# Merge to 16bit\n",
         "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"merged_16bit\",)\n",
-        "if True: model.push_to_hub_merged(\"Meta-Llama-3.1-8B-Instruct_syseng_vllm_v1\", tokenizer, save_method = \"merged_16bit\", token = \"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\")\n",
+        "if True: model.push_to_hub_merged(\"Meta-Llama-3.1-8B-Instruct_syseng_vllm_v2\", tokenizer, save_method = \"merged_16bit\", token = \"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\")\n",
         "\n",
         "# Merge to 4bit\n",
         "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"merged_4bit\",)\n",
