--- a/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
+++ b/Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb
@@ -127,7 +127,7 @@
         "    # [NEW] \"unsloth\" uses 30% less VRAM, fits 2x larger batch sizes!\n",
         "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
         "    random_state = 3407,\n",
-        "    use_rslora = True,  # We support rank stabilized LoRA\n",
+        "    use_rslora = False,  # We support rank stabilized LoRA\n",
         "    loftq_config = None, # And LoftQ\n",
         ")"
       ]
