--- a/Ragas.ipynb
+++ b/Ragas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPy7OS1o90ZrUypKHD1wNJ5",
+      "authorship_tag": "ABX9TyNU3m2OpfsmLzNQKjgQYmiv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,6 +373,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "https://docs.ragas.io/en/v0.1.21/concepts/metrics/answer_relevance.html"
+      ],
+      "metadata": {
+        "id": "X4xrumCCkYaH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "pip install langchain_openai ragas"
@@ -455,7 +464,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 140,
+          "height": 120,
           "referenced_widgets": [
             "5c523e3ea18e465a87f10ef2a7e48422",
             "a6cde23d03804053a472597b647558f1",
