--- a/Ragas.ipynb
+++ b/Ragas.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNU3m2OpfsmLzNQKjgQYmiv",
+      "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Ragas.ipynb",
+      "authorship_tag": "ABX9TyNq15t/DBA8YmBEyAFUeZPz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,7 +17,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "5c523e3ea18e465a87f10ef2a7e48422": {
+        "c92422b583aa4010b1adb3060074bfd3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -31,14 +32,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_a6cde23d03804053a472597b647558f1",
-              "IPY_MODEL_a7ccd10431ff46f8a8238a6cfa1e3fed",
-              "IPY_MODEL_25960870467849a7b62a23212ea62b86"
+              "IPY_MODEL_d079541ded604e59913f6959a34e8e18",
+              "IPY_MODEL_f11aa6a81aaf440292c3a6082c29e761",
+              "IPY_MODEL_fa270b9b39b440b8885d01b51b717453"
             ],
-            "layout": "IPY_MODEL_fff2b236b08541d88e82e833f10c5c72"
+            "layout": "IPY_MODEL_d780641b3dec468bb18e36b67f94ffe1"
           }
         },
-        "a6cde23d03804053a472597b647558f1": {
+        "d079541ded604e59913f6959a34e8e18": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -53,13 +54,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_62db9ea37a1340a29d5acbd20adfb2e0",
+            "layout": "IPY_MODEL_02511d4fd6434eb9814a09c4cec7fe6f",
             "placeholder": "​",
-            "style": "IPY_MODEL_7ec80675290b4290afc0abe34f326672",
+            "style": "IPY_MODEL_320b3c4d4c5d48c1b18b29235f3e5c09",
             "value": "Evaluating: 100%"
           }
         },
-        "a7ccd10431ff46f8a8238a6cfa1e3fed": {
+        "f11aa6a81aaf440292c3a6082c29e761": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -75,15 +76,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_2b5019ce45f64649819211e936559f88",
+            "layout": "IPY_MODEL_9a4a6d99dcc243f582bb6c6d06a59cc5",
             "max": 200,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_62f0a97a5e0a49d1864e31f1d30b67ca",
+            "style": "IPY_MODEL_060e1241eb844a399bb9ce5eddf48973",
             "value": 200
           }
         },
-        "25960870467849a7b62a23212ea62b86": {
+        "fa270b9b39b440b8885d01b51b717453": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -98,13 +99,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_d48addaf1cd540298bbe1d6125287106",
+            "layout": "IPY_MODEL_6286e1a2a836483b8414069555ac2862",
             "placeholder": "​",
-            "style": "IPY_MODEL_c7cd8112bdc24176aa26761e1d2a4fc3",
-            "value": " 200/200 [03:45&lt;00:00,  2.58s/it]"
+            "style": "IPY_MODEL_84e53e5b77c14e97b3dc0c4bfa52fdbf",
+            "value": " 200/200 [01:56&lt;00:00,  1.33s/it]"
           }
         },
-        "fff2b236b08541d88e82e833f10c5c72": {
+        "d780641b3dec468bb18e36b67f94ffe1": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -156,7 +157,7 @@
             "width": null
           }
         },
-        "62db9ea37a1340a29d5acbd20adfb2e0": {
+        "02511d4fd6434eb9814a09c4cec7fe6f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -208,7 +209,7 @@
             "width": null
           }
         },
-        "7ec80675290b4290afc0abe34f326672": {
+        "320b3c4d4c5d48c1b18b29235f3e5c09": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -223,7 +224,7 @@
             "description_width": ""
           }
         },
-        "2b5019ce45f64649819211e936559f88": {
+        "9a4a6d99dcc243f582bb6c6d06a59cc5": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -275,7 +276,7 @@
             "width": null
           }
         },
-        "62f0a97a5e0a49d1864e31f1d30b67ca": {
+        "060e1241eb844a399bb9ce5eddf48973": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -291,7 +292,7 @@
             "description_width": ""
           }
         },
-        "d48addaf1cd540298bbe1d6125287106": {
+        "6286e1a2a836483b8414069555ac2862": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -343,7 +344,7 @@
             "width": null
           }
         },
-        "c7cd8112bdc24176aa26761e1d2a4fc3": {
+        "84e53e5b77c14e97b3dc0c4bfa52fdbf": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -391,16 +392,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5f1b4aa-335e-4480-9dd5-49c02a9c47c3"
+        "outputId": "d2afa5b2-14e3-4f4b-8731-41b6ddaa1e0f"
       },
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "      Successfully uninstalled langchain-0.3.20\n",
-            "Successfully installed appdirs-1.4.4 dataclasses-json-0.6.7 datasets-3.4.1 dill-0.3.8 diskcache-5.6.3 httpx-sse-0.4.0 langchain-0.3.21 langchain-community-0.3.20 langchain-text-splitters-0.3.7 langchain_openai-0.3.9 marshmallow-3.26.1 multiprocess-0.70.16 mypy-extensions-1.0.0 openai-1.66.5 pydantic-settings-2.8.1 python-dotenv-1.0.1 ragas-0.2.14 tiktoken-0.9.0 typing-inspect-0.9.0 xxhash-3.5.0\n"
+            "Requirement already satisfied: mypy-extensions>=0.3.0 in /usr/local/lib/python3.11/dist-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community->ragas) (1.1.0)\n"
           ]
         }
       ]
@@ -412,14 +412,19 @@
         "import pandas as pd\n",
         "from langchain_openai import ChatOpenAI\n",
         "from ragas import evaluate, EvaluationDataset\n",
-        "from ragas.metrics import AnswerRelevancy, Faithfulness, FactualCorrectness, AnswerCorrectness\n",
         "from ragas.llms import LangchainLLMWrapper\n",
+        "from ragas.metrics import (\n",
+        "    AnswerRelevancy,\n",
+        "    Faithfulness,\n",
+        "    FactualCorrectness,\n",
+        "    AnswerCorrectness\n",
+        ")\n",
         "\n",
         "# OpenAI API Anahtarını Ayarla\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"-proj----\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk\"\n",
         "\n",
         "# Excel dosyasını oku (B sütununda sorular, C sütununda referans cevaplar, D sütununda deepseek-r1 cevapları)\n",
-        "df = pd.read_excel(\"/content/Data karşılaştırma.xlsx\")  # Dosya yolunuza göre güncelleyiniz\n",
+        "df = pd.read_excel(\"/content/Veri Karşılaştırma_test.xlsx\")  # Dosya yolunuza göre güncelleyiniz\n",
         "\n",
         "# Kolonları uygun değişkenlere alalım\n",
         "questions = df.iloc[:, 1].tolist()\n",
@@ -464,25 +469,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 120,
+          "height": 118,
           "referenced_widgets": [
-            "5c523e3ea18e465a87f10ef2a7e48422",
-            "a6cde23d03804053a472597b647558f1",
-            "a7ccd10431ff46f8a8238a6cfa1e3fed",
-            "25960870467849a7b62a23212ea62b86",
-            "fff2b236b08541d88e82e833f10c5c72",
-            "62db9ea37a1340a29d5acbd20adfb2e0",
-            "7ec80675290b4290afc0abe34f326672",
-            "2b5019ce45f64649819211e936559f88",
-            "62f0a97a5e0a49d1864e31f1d30b67ca",
-            "d48addaf1cd540298bbe1d6125287106",
-            "c7cd8112bdc24176aa26761e1d2a4fc3"
+            "c92422b583aa4010b1adb3060074bfd3",
+            "d079541ded604e59913f6959a34e8e18",
+            "f11aa6a81aaf440292c3a6082c29e761",
+            "fa270b9b39b440b8885d01b51b717453",
+            "d780641b3dec468bb18e36b67f94ffe1",
+            "02511d4fd6434eb9814a09c4cec7fe6f",
+            "320b3c4d4c5d48c1b18b29235f3e5c09",
+            "9a4a6d99dcc243f582bb6c6d06a59cc5",
+            "060e1241eb844a399bb9ce5eddf48973",
+            "6286e1a2a836483b8414069555ac2862",
+            "84e53e5b77c14e97b3dc0c4bfa52fdbf"
           ]
         },
         "id": "5sgd1i06gheB",
-        "outputId": "792e02e1-a1f6-4003-e6ef-229e4f219406"
+        "outputId": "ea4009fe-da77-48e4-bc0c-a56a79e5f208"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -493,7 +498,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "5c523e3ea18e465a87f10ef2a7e48422"
+              "model_id": "c92422b583aa4010b1adb3060074bfd3"
             }
           },
           "metadata": {}
@@ -505,7 +510,7 @@
             "\n",
             "--- DeepSeek-r1 Değerlendirme Sonuçları (ChatGPT-4o Referans Olarak Kullanıldı) ---\n",
             "\n",
-            "{'answer_relevancy': 0.8581, 'faithfulness': 0.0339, 'factual_correctness(mode=f1)': 0.2758, 'answer_correctness': 0.3510}\n"
+            "{'answer_relevancy': 0.8458, 'faithfulness': 0.0200, 'factual_correctness(mode=f1)': 0.2492, 'answer_correctness': 0.4218}\n"
           ]
         }
       ]
@@ -530,7 +535,7 @@
         },
         "outputId": "b7381f2f-9b70-4d13-e54b-4edef07f8749"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
