--- a/Ragas.ipynb
+++ b/Ragas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/Ragas.ipynb",
-      "authorship_tag": "ABX9TyNq15t/DBA8YmBEyAFUeZPz",
+      "authorship_tag": "ABX9TyNvDG72jX7tnO4Gu/LgMimC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -394,7 +394,7 @@
         },
         "outputId": "d2afa5b2-14e3-4f4b-8731-41b6ddaa1e0f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
         "id": "5sgd1i06gheB",
         "outputId": "ea4009fe-da77-48e4-bc0c-a56a79e5f208"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -554,12 +554,159 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "pip install \"trulens-eval[openai,langchain]\" --upgrade"
+      ],
       "metadata": {
-        "id": "jgjZGHHTmlLW"
+        "id": "96XYxRvvfW5R"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Eski kırıntıları temizle (opsiyonel ama tavsiye edilir)\n",
+        "!pip uninstall -y trulens trulens-eval trulens-providers-openai trulens-apps-langchain"
+      ],
+      "metadata": {
+        "id": "dKhOxcAMfYpf",
+        "outputId": "e6ac0be5-f6b1-40d4-a4e9-3ac36a5ed2a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed dataclasses-json-0.6.7 httpx-sse-0.4.0 langchain-community-0.3.24 marshmallow-3.26.1 mypy-extensions-1.1.0 pydantic-settings-2.9.1 trulens-apps-langchain-1.4.9 trulens-eval-1.4.9 trulens-providers-openai-1.4.9 typing-inspect-0.9.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Gerekli her şeyi tek seferde yükle\n",
+        "!pip install \"trulens-eval==1.4.9\" trulens-providers-openai trulens-apps-langchain langchain-community"
+      ],
+      "metadata": {
+        "id": "iet3FKQIiHbU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#   1) Köprü (back-compat) yolu\n",
+        "from trulens_eval.feedback.provider.openai import OpenAI as TruOpenAI\n",
+        "from trulens_eval import TruBasicApp, Feedback, Select, Tru\n",
+        "\n",
+        "#   2) Doğrudan yeni modüler yol\n",
+        "from trulens.providers.openai import OpenAI as TruOpenAI\n",
+        "from trulens.apps.langchain import TruChain          # gerekiyorsa\n",
+        "#from trulens import Tru, Feedback, Select\n",
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "ZD9OXa-Ufa6y"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- 1. Veri setini oku -----------------------------------------------------\n",
+        "df = pd.read_excel(\"/content/Data karşılaştırma.xlsx\")\n",
+        "\n",
+        "questions         = df.iloc[:, 1].tolist()   # B sütunu\n",
+        "reference_answers = df.iloc[:, 2].tolist()   # C sütunu\n",
+        "model_answers     = df.iloc[:, 3].tolist()   # D sütunu\n",
+        "\n",
+        "# --- 2. Hakem LLM ve provider ----------------------------------------------\n",
+        "judge_llm = ChatOpenAI(model=\"gpt-4o\", temperature=0)\n",
+        "provider  = TruOpenAI(llm=judge_llm)\n",
+        "\n",
+        "# --- 3. Feedback tanımları --------------------------------------------------\n",
+        "f_relevance = (\n",
+        "    Feedback(\n",
+        "        AnswerRelevance(provider=provider).measure,\n",
+        "        name=\"Answer Relevance\"\n",
+        "    )\n",
+        "    .on_input_output()\n",
+        ")\n",
+        "\n",
+        "f_grounded = (\n",
+        "    Feedback(\n",
+        "        Groundedness(provider=provider).measure,\n",
+        "        name=\"Faithfulness/Groundedness\"\n",
+        "    )\n",
+        "    .on_input_output()\n",
+        ")\n",
+        "\n",
+        "# Referans cevaba yakınlık: referansı her kaydın inputs'undan çekeceğiz\n",
+        "f_gt_agree = (\n",
+        "    Feedback(\n",
+        "        GroundTruthAgreement(provider=provider).agreement_measure,\n",
+        "        name=\"Ground-Truth Agreement\"\n",
+        "    )\n",
+        "    .on_output()                                 # model cevabı\n",
+        "    .against(lambda rec: rec.inputs[\"reference\"])  # altın cevap\n",
+        ")\n",
+        "\n",
+        "# --- 4. Basit Tru app -------------------------------------------------------\n",
+        "tru_app = TruBasicApp(\n",
+        "    app_id   = \"deepseek_eval\",\n",
+        "    feedbacks= [f_relevance, f_grounded, f_gt_agree]\n",
+        ")\n",
+        "\n",
+        "# --- 5. Kayıt döngüsü -------------------------------------------------------\n",
+        "tru = Tru()\n",
+        "tru.reset_database()\n",
+        "\n",
+        "for q, ref, ans in zip(questions, reference_answers, model_answers):\n",
+        "    tru_app.record(\n",
+        "        inputs  = {\"prompt\": q, \"reference\": ref},\n",
+        "        outputs = {\"response\": ans}\n",
+        "    )\n",
+        "\n",
+        "# --- 6. Sonuçları çek -------------------------------------------------------\n",
+        "records = tru.get_records(app_ids=[\"deepseek_eval\"])\n",
+        "\n",
+        "for rec in records:\n",
+        "    print(\"Soru :\", rec.record.inputs[\"prompt\"][:80])\n",
+        "    print(\"Cevap:\", rec.record.outputs[\"response\"][:80])\n",
+        "    for fb in rec.feedback:\n",
+        "        print(f\"  {fb.name}: {fb.value:.2f}\")\n",
+        "    print(\"-\"*60)\n"
+      ],
+      "metadata": {
+        "id": "jgjZGHHTmlLW",
+        "outputId": "69fd73a4-c7a7-4ce0-9f16-9dfd8c25ee37",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'ChatOpenAI' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-6d98637e3f2b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# --- 2. Hakem LLM ve provider ----------------------------------------------\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mjudge_llm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChatOpenAI\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"gpt-4o\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemperature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprovider\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mTruOpenAI\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mllm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjudge_llm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'ChatOpenAI' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
